--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
         return ([rad2degr(lat), rad2degr(lng)]);
     }  
         spinner.stop();
-        var myLatLng = {lat: 38.670280983161014, lng: -94.00697987685888};
+      //  var myLatLng = {lat: 38.670280983161014, lng: -94.00697987685888};
          var mapOptions = {
               styles: lightGreyTheme,
-              zoom: 5,
-              minZoom: 4,
+              zoom: 2,
+              minZoom: 2,
 			  maxZoom: 15,
               center: bounds.getCenter()
          };
